docs in constant of index.html
change in existing file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>student side</title>
 </head>
 <body>
-    hi am rupali...
+    Hey! I'm Rupali here :)
+    I am currently participating in this challange.
 </body>
 </html>
