--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hey! I'm Rupali here :)
     I am currently participating in this challange.
+
+    I am working in the project details.
 </body>
 </html>
